--- a/src/app/modules/dashboard/evp-od-dashboard/evp-od-dashboard.component.html
+++ b/src/app/modules/dashboard/evp-od-dashboard/evp-od-dashboard.component.html
@@ -38,7 +38,7 @@
         <div class=" overflow-x-hidden overflow-y-scroll">
             <div class="row pb-4">
                 <div class="col-lg-6 mb-3">
-                    <div class="shadow-sm border graph-box" style="height: 365px;">
+                    <div class="shadow-sm border graph-box" style="height:auto !important;">
                         <div *ngIf="chartOptions" class=" mt-0 py-3" id="chart">
                             <apx-chart [chart]="chartOptions?.chart"
                                        [colors]="chartOptions?.colors"
