--- a/src/app/modules/dashboard/president-ztbl/president-ztbl.component.html
+++ b/src/app/modules/dashboard/president-ztbl/president-ztbl.component.html
@@ -39,7 +39,7 @@
         <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
             <div class="row">
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border graph-box" style="height: 365px;">
+                    <div class="shadow-sm border graph-box" style="height:auto !important;">
                         <div *ngIf="chartOptions1" class=" m-0 pt-2" id="chart">
                             <apx-chart
                                 [chart]="chartOptions1.chart"
@@ -59,7 +59,7 @@
 
                 </div>
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border graph-box" style="height: 365px;">
+                    <div class="shadow-sm border graph-box" style="height:auto !important;">
                         <div *ngIf="chartOptions2" class=" m-0 pt-2" id="chart">
                             <apx-chart
                                 [chart]="chartOptions2.chart"
@@ -79,7 +79,7 @@
                 </div>
 
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border graph-box" style="height: 365px;">
+                    <div class="shadow-sm border graph-box" style="height:auto !important;">
                         <div *ngIf="chartOptions3" class=" m-0 pt-2" id="chart">
                             <apx-chart
                                 [chart]="chartOptions3.chart"
@@ -99,7 +99,7 @@
                 </div>
 
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border graph-box" style="height: 365px;">
+                    <div class="shadow-sm border graph-box" style="height:auto !important;">
                         <div *ngIf="chartOptions4" class=" m-0 pt-2" id="chart">
                             <apx-chart
                                 [chart]="chartOptions4.chart"
