--- a/src/app/modules/dashboard/branch-manager-dashboard/branch-manager-dashboard.component.html
+++ b/src/app/modules/dashboard/branch-manager-dashboard/branch-manager-dashboard.component.html
@@ -37,7 +37,7 @@
         <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="shadow-sm border graph-box" style="height: 365px;">
+                    <div class="shadow-sm border graph-box" style="height:auto !important;">
                         <div *ngIf="chartPerformanceIndicators" class=" mt-0 py-3" id="chart">
                             <apx-chart [chart]="chartPerformanceIndicators?.chart"
                                        [colors]="chartPerformanceIndicators?.colors"
@@ -56,7 +56,7 @@
 
                 </div>
                 <div class="col-lg-6">
-                    <div class="shadow-sm border graph-box" style="height: 365px;">
+                    <div class="shadow-sm border graph-box" style="height:auto !important;">
                         <div *ngIf="chartLoanPortfolio" class=" mt-0 py-3" id="chart">
                             <apx-chart [chart]="chartLoanPortfolio?.chart"
                                        [dataLabels]="chartLoanPortfolio.dataLabels"
@@ -76,7 +76,7 @@
             </div>
             <div class="row ">
                 <div class="col-lg-6 mt-3">
-                    <div class="shadow-sm border graph-box" style="height: 365px;">
+                    <div class="shadow-sm border graph-box" style="height:auto !important;">
                         <div *ngIf="chartnoOfBorrowers" class=" mt-0 py-3" id="chart">
                             <apx-chart [chart]="chartnoOfBorrowers?.chart"
                                        [dataLabels]="chartnoOfBorrowers.dataLabels"
@@ -92,7 +92,7 @@
 
                 </div>
                 <div class="col-lg-6 py-3">
-                    <div *ngIf="CreditCeiling" class="shadow-sm border pt-2 graph-box" style="height: 365px;">
+                    <div *ngIf="CreditCeiling" class="shadow-sm border pt-2 graph-box" style="height:auto !important;">
                         <p class=" ml-3 mb-5 " style="font-size: 14px; font-weight: 900;">Credit Ceiling</p>
                         <app-pyramid-chart [item]="CreditCeiling" class="mt-5">
 
