--- a/src/app/modules/dashboard/evp-credit-dashboard/evp-credit-dashboard.component.html
+++ b/src/app/modules/dashboard/evp-credit-dashboard/evp-credit-dashboard.component.html
@@ -37,7 +37,7 @@
             <div class="row">
 
                 <div class="col-lg-6">
-                    <div class="shadow-sm border graph-box" style="height: 365px;">
+                    <div class="shadow-sm border graph-box" style="height:auto !important;">
                         <div *ngIf="chartOptions1" class=" mt-0 py-3  position-relative " id="chart">
                             <apx-chart [chart]="chartOptions1?.chart" [colors]="chartOptions1?.colors"
                                        [dataLabels]="chartOptions1.dataLabels" [labels]="chartOptions1?.labels"
@@ -52,7 +52,7 @@
 
                 </div>
                 <div class="col-lg-6">
-                    <div class="shadow-sm border graph-box" style="height: 365px;">
+                    <div class="shadow-sm border graph-box" style="height:auto !important;">
                         <div *ngIf="chartOptions2" class=" mt-0 py-3  position-relative " id="chart">
                             <apx-chart [chart]="chartOptions2?.chart"
                                        [colors]="chartOptions2?.colors"
@@ -70,7 +70,7 @@
 
                 </div>
                 <div class="col-lg-6 mt-3">
-                    <div class="shadow-sm border graph-box" style="height: 365px;">
+                    <div class="shadow-sm border graph-box" style="height:auto !important;">
                         <div *ngIf="chartOptions3" class=" mt-0 py-3  position-relative " id="chart">
                             <apx-chart [chart]="chartOptions3?.chart"
                                        [colors]="chartOptions3?.colors"
@@ -87,7 +87,7 @@
 
                 </div>
                 <div class="col-lg-6 mt-3">
-                    <div class="shadow-sm border graph-box" style="height: 365px;">
+                    <div class="shadow-sm border graph-box" style="height:auto !important;">
                         <div *ngIf="chartOptions4" class=" mt-0 py-3  position-relative " id="chart">
                             <apx-chart [chart]="chartOptions4?.chart"
                                        [colors]="chartOptions4?.colors"
@@ -104,7 +104,7 @@
 
                 </div>
                 <div class="col-lg-6 py-3">
-                    <div *ngIf="CreditCeiling" class="shadow-sm border pt-2" style="height: 365px;">
+                    <div *ngIf="CreditCeiling" class="shadow-sm border pt-2" style="height:auto !important;">
                         <p class=" ml-3" style="font-size: 14px; font-weight: 900;">Credit Ceiling</p>
                         <app-pyramid-chart [item]="CreditCeiling">
 
