--- a/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
+++ b/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
@@ -34,7 +34,7 @@
     <div class="flex flex-auto" style="flex-direction: column;">
         <div class="row">
             <div class="col-lg-6 col-sm-12 my-2  ">
-                <div class="shadow-sm border graph-box" style="height: 365px;">
+                <div class="shadow-sm border graph-box" style="height:auto !important;">
                     <div *ngIf="chartOptions1" class=" mt-0 py-3  position-relative " id="chart">
                         <p class="text-green px-2 font-bold mb-0">Performance Indicators</p>
                         <apx-chart
@@ -54,7 +54,7 @@
 
             </div>
             <div class="col-lg-6 col-sm-12 my-2">
-                <div class="shadow-sm border graph-box" style="height: 365px;">
+                <div class="shadow-sm border graph-box" style="height:auto !important;">
                     <div *ngIf="chartOptions2" class=" mt-0 py-3" id="chart">
                         <p class="text-green px-2 font-bold mb-0">Circle Bench Mark</p>
                         <apx-chart
@@ -77,7 +77,7 @@
         </div>
         <div class="row">
             <div class="col-lg-6 col-sm-12 my-2">
-                <div class="shadow-sm border graph-box" style="height: 365px;">
+                <div class="shadow-sm border graph-box" style="height:auto !important;">
                     <div *ngIf="chartOptions3" class="mt-0 py-3" id="chart">
                         <p class="text-green px-2 font-bold mb-0">Loan Portfolio</p>
                         <apx-chart
@@ -97,7 +97,7 @@
 
             </div>
             <div class="col-lg-6 col-sm-12 my-2">
-                <div class="shadow-sm border graph-box" style="height: 365px;">
+                <div class="shadow-sm border graph-box" style="height:auto !important;">
                     <div *ngIf="chartOptions4" class="mt-0 py-3" id="chart">
                         <p class="text-green px-2 font-bold mb-0">Circle Radius</p>
                         <apx-chart
