--- a/src/app/modules/dashboard/provincial-chief/provincial-chief.component.html
+++ b/src/app/modules/dashboard/provincial-chief/provincial-chief.component.html
@@ -39,7 +39,7 @@
         <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
             <div class="row">
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border graph-box" style="height: 365px;">
+                    <div class="shadow-sm border graph-box" style="height:auto !important;">
                         <div *ngIf="chartOptions" class=" m-0 pt-2" id="chart">
                             <apx-chart
                                 [chart]="chartOptions.chart"
@@ -60,7 +60,7 @@
 
                 </div>
                 <div class="col-lg-6 py-3">
-                    <div *ngIf="CreditCeiling" class="shadow-sm border pt-2" style="height: 365px;">
+                    <div *ngIf="CreditCeiling" class="shadow-sm border pt-2" style="height:auto !important;">
                         <p class=" ml-3" style="font-size: 14px; font-weight: 900;">Credit Ceiling</p>
                         <app-pyramid-chart [item]="CreditCeiling">
                         </app-pyramid-chart>
