--- a/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
@@ -10,7 +10,11 @@
             </div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
-            <button class="py-1 mat-focus-indicator mat-flat-button mat-button-base mat-primary" (click)="previous()" *ngIf="has_previous"><mat-icon class="mr-2">keyboard_backspace</mat-icon>Back To List</button>
+            <button class="py-1 mat-focus-indicator mat-flat-button mat-button-base mat-primary" (click)="previous()"
+                    *ngIf="has_previous">
+                <mat-icon class="mr-2">keyboard_backspace</mat-icon>
+                Back To List
+            </button>
 
             <!--            <p class="text-right">-->
             <!--                <button class="mt-1  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"-->
@@ -60,7 +64,8 @@
                                     <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                         <mat-label class="customMatLabel">Tour Date<strong
                                             class="matMandatory">*</strong></mat-label>
-                                        <input (dateChange)="setDate()" [matDatepicker]="picker2" [max]="maxDate" appNumberOnly
+                                        <input (dateChange)="setDate()" [matDatepicker]="picker2" [max]="maxDate"
+                                               appNumberOnly
                                                autocomplete="off"
                                                formControlName="TourDate" matInput maxlength="8"
                                                readonly/>
@@ -98,7 +103,8 @@
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label>Departure From Place<strong class="matMandatory">*</strong>
                                             </mat-label>
-                                            <mat-select [disabled]="!edit_mode && currentActivity.R" formControlName="DepartureFromPlace"
+                                            <mat-select [disabled]="!edit_mode && currentActivity.R"
+                                                        formControlName="DepartureFromPlace"
                                                         matInput>
                                                 <mat-option *ngFor="let branch of SelectedBranches"
                                                             [value]="branch?.Name">
@@ -113,10 +119,12 @@
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label class="customMatLabel">Departure Time<strong
                                                 class="matMandatory">*</strong></mat-label>
-                                            <input [disabled]="!edit_mode && currentActivity.R" [format]="DateFormat()" [ngxTimepicker]="timepickerDeparture"
+                                            <input [disabled]="!edit_mode && currentActivity.R" [format]="DateFormat()"
+                                                   [ngxTimepicker]="timepickerDeparture"
                                                    formControlName="DepartureFromTime" matInput
                                                    readonly type="text"/>
-                                            <mat-icon (click)="openFromIcon(timepickerDeparture)" *ngIf="edit_mode" class="cursor-pointer"
+                                            <mat-icon (click)="openFromIcon(timepickerDeparture)" *ngIf="edit_mode"
+                                                      class="cursor-pointer"
                                                       matSuffix>schedule
                                             </mat-icon>
                                             <mat-icon *ngIf="!edit_mode" matSuffix>schedule</mat-icon>
@@ -140,7 +148,8 @@
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label>Arrival At Place<strong class="matMandatory">*</strong>
                                             </mat-label>
-                                            <mat-select [disabled]="!edit_mode && currentActivity.R" formControlName="ArrivalAtPlace"
+                                            <mat-select [disabled]="!edit_mode && currentActivity.R"
+                                                        formControlName="ArrivalAtPlace"
                                                         matInput>
                                                 <mat-option *ngFor="let branch of SelectedBranches"
                                                             [value]="branch?.Name">
@@ -155,11 +164,13 @@
                                         <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                             <mat-label class="customMatLabel">Arrival Time<strong
                                                 class="matMandatory">*</strong></mat-label>
-                                            <input [disabled]="!edit_mode && currentActivity.R" [format]="DateFormat()" [ngxTimepicker]="timepickerArrival"
+                                            <input [disabled]="!edit_mode && currentActivity.R" [format]="DateFormat()"
+                                                   [ngxTimepicker]="timepickerArrival"
                                                    formControlName="ArrivalAtTime" matInput
                                                    readonly
                                                    type="text"/>
-                                            <mat-icon (click)="openFromIcon(timepickerArrival)" *ngIf="edit_mode" class="cursor-pointer"
+                                            <mat-icon (click)="openFromIcon(timepickerArrival)" *ngIf="edit_mode"
+                                                      class="cursor-pointer"
                                                       matSuffix>schedule
                                             </mat-icon>
                                             <mat-icon *ngIf="!edit_mode" matSuffix>schedule</mat-icon>
@@ -176,7 +187,8 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 240px;">
                                     <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                         <mat-label class="customMatLabel">Loan Cases Not Issued to Borrowers</mat-label>
-                                        <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly autocomplete="off"
+                                        <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly
+                                               autocomplete="off"
                                                formControlName="LCNotIssuedToBorrowers"
                                                matInput placeholder="Loan Cases Not issued To Borrowers"/>
                                     </mat-form-field>
@@ -204,7 +216,8 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                         <mat-label class="customMatLabel">No. of Defaulters Contacted</mat-label>
-                                        <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly autocomplete="off"
+                                        <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly
+                                               autocomplete="off"
                                                formControlName="RecNoOfDefaulterContacted"
                                                matInput placeholder="No. of Defaulters Contacted"/>
                                     </mat-form-field>
@@ -213,7 +226,8 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                         <mat-label class="customMatLabel">Remarks</mat-label>
-                                        <input [readonly]="!edit_mode && currentActivity.R" autocomplete="off" formControlName="Remarks"
+                                        <input [readonly]="!edit_mode && currentActivity.R" autocomplete="off"
+                                               formControlName="Remarks"
                                                matInput placeholder="Remarks"/>
                                     </mat-form-field>
                                 </div>
@@ -224,19 +238,22 @@
 
                         <div class="row mt-2 mr-1">
                             <div class="col-lg-12 text-right">
-                                <button (click)="saveTourDiary()" *ngIf="isUpdate==false && currentActivity.C && edit_mode"
+                                <button (click)="saveTourDiary()"
+                                        *ngIf="isUpdate==false && currentActivity.C && edit_mode"
                                         class="mr-2 bg-green" color="primary" mat-raised-button
                                         type="button">
                                     <mat-icon class="mr-2">save</mat-icon>
                                     Save
                                 </button>
-                                <button (click)="saveTourDiary()" *ngIf="isUpdate==true && currentActivity.D && edit_mode"
+                                <button (click)="saveTourDiary()"
+                                        *ngIf="isUpdate==true && currentActivity.D && edit_mode"
                                         class="mr-2 bg-green" color="primary" mat-raised-button
                                         type="button">
                                     <mat-icon class="mr-2">save</mat-icon>
                                     Update
                                 </button>
-                                <button (click)="changeStatus('','S')" *ngIf="currentActivity.U && edit_mode" [disabled]="checkDisable" class="mr-2"
+                                <button (click)="changeStatus('','S')" *ngIf="currentActivity.U && edit_mode"
+                                        [disabled]="checkDisable" class="mr-2"
                                         color="primary" mat-raised-button
                                         type="button">
                                     <mat-icon class="mr-2">check_circle</mat-icon>
@@ -244,7 +261,8 @@
                                 </button>
                                 <button (click)="onClearForm()"
                                         *ngIf="currentActivity.C && edit_mode"
-                                        class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" color="danger" mat-raised-button
+                                        class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
+                                        color="danger" mat-raised-button
                                         type="button">
                                     <mat-icon class="mr-2"> clear_all</mat-icon>
                                     Clear
@@ -295,7 +313,9 @@
                                 <tbody>
                                 <tr *ngFor="let ZmTourDiary of TourDiaryList">
                                     <td>
-                                        <button (click)="edit(ZmTourDiary); container.scrollTop = 0" *ngIf="checkStatus(ZmTourDiary, 'edit') && currentActivity.U && edit_mode" class="ml-2"
+                                        <button (click)="edit(ZmTourDiary); container.scrollTop = 0"
+                                                *ngIf="checkStatus(ZmTourDiary, 'edit') && currentActivity.U && edit_mode"
+                                                class="ml-2"
                                                 color="primary"
                                                 mat-icon-button
                                         >
@@ -420,19 +440,19 @@
                                 </thead>
                                 <tbody>
                                 <tr>
-                                    <td  >{{systemGenerated?.RecoveryAmountUpToEOMPD}}</td>
-                                    <td  >{{systemGenerated?.RecoveryAmountUpToEOMCD}}</td>
-                                    <td  >{{systemGenerated?.RecoveryAmountUpToEOMTotal}}</td>
-                                    <td  >{{systemGenerated?.RDuringMonthPD}}</td>
-                                    <td  >{{systemGenerated?.RDuringMonthCD}}</td>
-                                    <td  >{{systemGenerated?.RDuringMonthTotal}}</td>
-                                    <td  >{{systemGenerated?.RBalnceRecoverablePD}}</td>
-                                    <td  >{{systemGenerated?.RBalnceRecoverableCD}}</td>
-                                    <td  >{{systemGenerated?.RBalnceRecoverableTotal}}</td>
-                                    <td  >{{systemGenerated?.RDuringCorrespondingPD}}</td>
-                                    <td  >{{systemGenerated?.RDuringCorrespondingCD}}</td>
-                                    <td  >{{systemGenerated?.RDuringCorrespondingTotal}}</td>
-                                    <td  >{{systemGenerated?.RecIncreaseDecrease}}</td>
+                                    <td>{{systemGenerated?.RecoveryAmountUpToEOMPD}}</td>
+                                    <td>{{systemGenerated?.RecoveryAmountUpToEOMCD}}</td>
+                                    <td>{{systemGenerated?.RecoveryAmountUpToEOMTotal}}</td>
+                                    <td>{{systemGenerated?.RDuringMonthPD}}</td>
+                                    <td>{{systemGenerated?.RDuringMonthCD}}</td>
+                                    <td>{{systemGenerated?.RDuringMonthTotal}}</td>
+                                    <td>{{systemGenerated?.RBalnceRecoverablePD}}</td>
+                                    <td>{{systemGenerated?.RBalnceRecoverableCD}}</td>
+                                    <td>{{systemGenerated?.RBalnceRecoverableTotal}}</td>
+                                    <td>{{systemGenerated?.RDuringCorrespondingPD}}</td>
+                                    <td>{{systemGenerated?.RDuringCorrespondingCD}}</td>
+                                    <td>{{systemGenerated?.RDuringCorrespondingTotal}}</td>
+                                    <td>{{systemGenerated?.RecIncreaseDecrease}}</td>
                                     <td>
                                         <ul>
                                             <li>Reschedulement</li>
