initial reports done

--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -461,7 +461,7 @@
         <div *ngIf="IsReportCardVisable('reports/tour-diary-report')" class="col-lg-4 col-sm-12 mt-5">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText"
-                      routerLink="changes-to-user-access-rights">
+                      routerLink="tour-diary-report">
 
                 <div class="d-grid" style="justify-items: center;">
                     <img class="img-responsive center-block w-12 mx-auto mb-3"
@@ -478,7 +478,7 @@
         <div *ngIf="IsReportCardVisable('reports/status-lc-initiate-by-mco')" class="col-lg-4 col-sm-12 mt-5">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText"
-                      routerLink="changes-to-user-access-rights">
+                      routerLink="status-lc-initiate-by-mco">
 
                 <div class="d-grid" style="justify-items: center;">
                     <img class="img-responsive center-block w-12 mx-auto mb-3"
@@ -486,7 +486,7 @@
 
 
                     <p class=" text-black"
-                    >Complete Status of Each Loan Case initiated by MCO</p>
+                    >Complete Status of Each Loan Case Initiated By MCO</p>
                 </div>
 
             </mat-card>
