--- a/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
@@ -54,7 +54,8 @@
                                     <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                         <mat-label class="customMatLabel">Tour Date<strong
                                             class="matMandatory">*</strong></mat-label>
-                                        <input (dateChange)="setDate()" [matDatepicker]="picker2" [max]="maxDate" appNumberOnly
+                                        <input (dateChange)="setDate()" [matDatepicker]="picker2" [max]="maxDate"
+                                               appNumberOnly
                                                autocomplete="off"
                                                formControlName="TourDate" matInput maxlength="8"
                                                readonly/>
@@ -102,13 +103,18 @@
                                                          style="width: 225px;">
                                                         <mat-form-field appearance="outline"
                                                                         class="mat-form-field-fluid w-full">
-                                                            <mat-label class="customMatLabel">Departure Place<strong
-                                                                class="matMandatory">*</strong></mat-label>
-                                                            <input [readonly]="!edit_mode && currentActivity.R" appAlphaNumericField
-                                                                   autocomplete="off"
-                                                                   formControlName="DepartureFromPlace" matInput
-                                                                   maxlength="30"
-                                                                   placeholder="Departure Place"/>
+                                                            <mat-label>Departure Place<strong
+                                                                class="matMandatory">*</strong>
+                                                            </mat-label>
+                                                            <mat-select [disabled]="!edit_mode && currentActivity.R"
+                                                                        formControlName="DepartureFromPlace"
+                                                                        (selectionChange)="setDate()"
+                                                                        matInput>
+                                                                <mat-option *ngFor="let branch of SelectedBranches"
+                                                                            [value]="branch?.Name">
+                                                                    {{branch?.Name}}
+                                                                </mat-option>
+                                                            </mat-select>
                                                         </mat-form-field>
                                                     </div>
                                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
@@ -185,13 +191,19 @@
                                                          style="width: 225px;">
                                                         <mat-form-field appearance="outline"
                                                                         class="mat-form-field-fluid w-full">
-                                                            <mat-label class="customMatLabel">Arrival Place<strong
-                                                                class="matMandatory">*</strong></mat-label>
-                                                            <input [readonly]="!edit_mode && currentActivity.R" appAlphaNumericField
-                                                                   autocomplete="off"
-                                                                   formControlName="ArrivalAtPlace"
-                                                                   matInput maxlength="30"
-                                                                   placeholder="Arrival Place"/>
+                                                            <mat-label>Arrival At Place<strong
+                                                                class="matMandatory">*</strong>
+                                                            </mat-label>
+                                                            <mat-select [disabled]="!edit_mode && currentActivity.R"
+                                                                        formControlName="ArrivalAtPlace"
+                                                                        (selectionChange)="setDate()"
+                                                                        matInput>
+                                                                <mat-option *ngFor="let branch of SelectedBranches"
+
+                                                                            [value]="branch?.Name">
+                                                                    {{branch?.Name}}
+                                                                </mat-option>
+                                                            </mat-select>
                                                         </mat-form-field>
                                                     </div>
                                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
@@ -282,7 +294,8 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                         <mat-label class="customMatLabel">Audit Reports</mat-label>
-                                        <input [readonly]="!edit_mode && currentActivity.R" autocomplete="off" formControlName="AuditReports"
+                                        <input [readonly]="!edit_mode && currentActivity.R" autocomplete="off"
+                                               formControlName="AuditReports"
                                                matInput placeholder="Audit Reports"/>
                                     </mat-form-field>
                                 </div>
@@ -299,7 +312,8 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                         <mat-label class="customMatLabel">Settlement</mat-label>
-                                        <input [readonly]="!edit_mode && currentActivity.R" autocomplete="off" formControlName="Settlements"
+                                        <input [readonly]="!edit_mode && currentActivity.R" autocomplete="off"
+                                               formControlName="Settlements"
                                                matInput placeholder="Settlement"/>
                                     </mat-form-field>
                                 </div>
@@ -312,7 +326,8 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                         <mat-label class="customMatLabel">No. of Utilizations Checked</mat-label>
-                                        <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly autocomplete="off"
+                                        <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly
+                                               autocomplete="off"
                                                formControlName="NoOfUtilizationChecked" matInput
                                                placeholder="No. of Utilizations Checked"/>
                                     </mat-form-field>
@@ -328,7 +343,8 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                         <mat-label class="customMatLabel">Progressive Farmers Contacted</mat-label>
-                                        <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly autocomplete="off"
+                                        <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly
+                                               autocomplete="off"
                                                formControlName="TOTFarmersContacted" matInput
                                                placeholder="rogressive Farmers Contacted"/>
                                     </mat-form-field>
@@ -337,7 +353,8 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                         <mat-label class="customMatLabel">No. of Farms Visited</mat-label>
-                                        <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly autocomplete="off"
+                                        <input [readonly]="!edit_mode && currentActivity.R" appNumberOnly
+                                               autocomplete="off"
                                                formControlName="TOTNoOfFarmersVisisted" matInput
                                                placeholder="No. of Farms Visited"/>
                                     </mat-form-field>
@@ -361,7 +378,8 @@
                                     <mat-form-field appearance="outline" class="mat-form-field-fluid w-full">
                                         <mat-label class="customMatLabel">Remarks<strong class="matMandatory">*</strong>
                                         </mat-label>
-                                        <input [readonly]="!edit_mode && currentActivity.R" autocomplete="off" formControlName="Remarks"
+                                        <input [readonly]="!edit_mode && currentActivity.R" autocomplete="off"
+                                               formControlName="Remarks"
                                                matInput placeholder="Remarks"/>
                                     </mat-form-field>
                                 </div>
@@ -383,14 +401,16 @@
                                 Update
                             </button>
 
-                            <button (click)="changeStatus('','S')" *ngIf="currentActivity.U && edit_mode" [disabled]="checkDisable" class="mr-2"
+                            <button (click)="changeStatus('','S')" *ngIf="currentActivity.U && edit_mode"
+                                    [disabled]="checkDisable" class="mr-2"
                                     color="primary" mat-raised-button type="button">
                                 <mat-icon class="mr-2">check_circle</mat-icon>
                                 Submit
                             </button>
                             <button (click)="onClearForm()"
                                     *ngIf="currentActivity.C && edit_mode"
-                                    class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" color="danger" mat-raised-button
+                                    class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
+                                    color="danger" mat-raised-button
                                     type="button">
                                 <mat-icon class="mr-2"> clear_all</mat-icon>
                                 Clear
@@ -430,7 +450,9 @@
                             <tbody>
                             <tr *ngFor="let ZcTourDiary of TourDiaryList">
                                 <td>
-                                    <button (click)="edit(ZcTourDiary); container.scrollTop = 0" *ngIf="checkStatus(ZcTourDiary, 'edit') && currentActivity.U && edit_mode" class="ml-2" color="primary"
+                                    <button (click)="edit(ZcTourDiary); container.scrollTop = 0"
+                                            *ngIf="checkStatus(ZcTourDiary, 'edit') && currentActivity.U && edit_mode"
+                                            class="ml-2" color="primary"
                                             mat-icon-button
                                             type="button"
                                     >
@@ -438,7 +460,8 @@
                                             edit
                                         </mat-icon>
                                     </button>
-                                    <button (click)="delete(ZcTourDiary, 'C')" *ngIf="checkStatus(ZcTourDiary, 'delete') && currentActivity.D && edit_mode"
+                                    <button (click)="delete(ZcTourDiary, 'C')"
+                                            *ngIf="checkStatus(ZcTourDiary, 'delete') && currentActivity.D && edit_mode"
                                             mat-icon-button
                                             type="button">
                                         <mat-icon class="text-red-500">
