ZC system generated data patched

--- a/src/app/modules/tour-dairy/tour-diary-approval-zc/tour-diary-approval-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-zc/tour-diary-approval-zc.component.html
@@ -89,12 +89,12 @@
                         <td>{{ZcTourDiary.LCNotIssuedToBorrowers}}</td>
                         <td>{{ZcTourDiary.TOTFarmersContacted}}</td>
                         <td>{{ZcTourDiary.TOTNoOfFarmersVisisted}}</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>{{systemGenerated.PortfolioGeneralNo}}</td>
+                        <td>{{systemGenerated.PortfolioGeneralAmount}}</td>
+                        <td>{{systemGenerated.PortfolioNplNo}}</td>
+                        <td>{{systemGenerated.PortfolioNplAmount}}</td>
+                        <td>{{systemGenerated.PortfolioSamNo}}</td>
+                        <td>{{systemGenerated.PortfolioSamAmount}}</td>
                         <td>{{ZcTourDiary.AnyOtherWorkDone}}</td>
                         <td>{{ZcTourDiary.Remarks}}</td>
                     </tr>
