--- a/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
@@ -523,12 +523,12 @@
                                 <td>{{ZcTourDiary.NoOfUtilizationChecked}}</td>
                                 <td>{{ZcTourDiary.TOTFarmersContacted}}</td>
                                 <td>{{ZcTourDiary.TOTNoOfFarmersVisisted}}</td>
-                                <td>{{ZcTourDiary.PortfolioGeneralNo}}</td>
-                                <td>{{ZcTourDiary.PortfolioGeneralAmount}}</td>
-                                <td>{{ZcTourDiary.PortfolioNplNo}}</td>
-                                <td>{{ZcTourDiary.PortfolioNplAmount}}</td>
-                                <td>{{ZcTourDiary.PortfolioSamNo}}</td>
-                                <td>{{ZcTourDiary.PortfolioSamAmount}}</td>
+                                <td>{{systemGenerated?.PortfolioGeneralNo}}</td>
+                                <td>{{systemGenerated?.PortfolioGeneralAmount}}</td>
+                                <td>{{systemGenerated?.PortfolioNplNo}}</td>
+                                <td>{{systemGenerated?.PortfolioNplAmount}}</td>
+                                <td>{{systemGenerated?.PortfolioSamNo}}</td>
+                                <td>{{systemGenerated?.PortfolioSamAmount}}</td>
                                 <td>{{ZcTourDiary.AnyOtherWorkDone}}</td>
                                 <td>{{ZcTourDiary.Remarks}}</td>
                             </tr>
